<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="16dp"
            style="@style/second_form_title_text_style"
            android:text="Start time first time before 7:30"/>

    <LinearLayout style="@style/WidthMatchHeightWrapVertical">

        <TextView
                style="@style/register_title_style"
                android:text="Machine"/>

        <com.maxx.eparchi.utils.view.NoDefaultARSpinner2
                android:id="@+id/startTimeBeforeMachineSpinner"
                style="@style/DefaultSpinnerStyle"/>

    </LinearLayout>

    <EditText
            style="@style/BorderEditTextStyle"
            android:id="@+id/startTimeEditText"
            android:inputType="text"
            android:hint="Start Time"/>

    <EditText
            style="@style/BorderEditTextStyle"
            android:id="@+id/operatorEditText"
            android:inputType="text"
            android:hint="Operator"/>

    <EditText
            style="@style/BorderEditTextStyle"
            android:id="@+id/helperEditText"
            android:inputType="text"
            android:hint="Helper"/>

    <EditText
            style="@style/BorderEditTextStyle"
            android:inputType="text"
            android:hint="Contractor"/>


    <Button
            style="@style/button_style"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/submit"/>

    <LinearLayout style="@style/WidthMatchHeightWrapHorizontal"
                  android:layout_marginTop="20dp"
                  android:layout_marginBottom="20dp"
                  android:gravity="center">

        <Button
                android:id="@+id/btnPowerCut"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                style="@style/button_style"
                android:text="@string/power_cut"/>

        <Button
                android:id="@+id/btnShiftEnd"
                style="@style/button_style"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:text="@string/shift_end"/>

    </LinearLayout>

</LinearLayout>